--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -53,7 +53,11 @@ button:hover {
 }
 
 main {
-	margin-bottom: 313px;
+	width: 1170px;
+    margin: 54px auto;
+    height: 2566px;
+    display: block;
+    font-size: 20px;
 }
 
 footer {
