--- a/src/styles/filter.module.css
+++ b/src/styles/filter.module.css
@@ -1,9 +1,5 @@
 .mainFilter {
-  font-family: 'Montserrat', sans-serif;
-  padding: 20px;
-  background-color: #f6f6f6;
-  border-radius: 8px;
-  width: 250px;
+  width: 170px;
 }
 
 .filterTitle {
@@ -15,7 +11,6 @@
 .filterSubtitle {
   font-size: 18px;
   font-weight: 600;
-  margin-bottom: -30px;
 }
 
 .priceFilter {
@@ -25,13 +20,14 @@
 
 .priceInputContainer {
   width: 100%;
+  margin-top: -35px;
 }
 
 .priceInput {
   width: 100%;
   display: block;
   font-size: 19px;
-  color: #555;
+  color: #555555;
   margin-top: 40px;
   margin-bottom: 20px;
 }
@@ -42,9 +38,8 @@
 }
 
 .priceFromTo {
-  justify-content: flex-start;
-  gap: 80px;
-  font-size: 12px;
+  justify-content: space-between;
+  font-size: 14px;
   margin-bottom: 4px;
 }
 
@@ -91,7 +86,7 @@
   height: 100%;
   position: absolute;
   border-radius: 5px;
-  background: #888;
+  background: #888888;
 }
 
 .rangeInput {
@@ -119,11 +114,12 @@
   background: #6D6D6D;
   pointer-events: auto;
   -webkit-appearance: none;
+  appearance: none;
 }
 
 .minRange::-webkit-slider-thumb:hover,
 .maxRange::-webkit-slider-thumb:hover {
-  background: #555;
+  background: #555555;
 }
 
 .minRange::-moz-range-thumb,
@@ -136,8 +132,72 @@
   border: none;
 }
 
+.checkboxGroup {
+  margin-top: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.checkboxLabel {
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding-left: 26px;
+  cursor: pointer;
+  font-size: 12px;
+  min-height: 15px;
+}
+
+.checkboxLabel input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: #6D6D6D;
+  border: 1px solid #464646;
+  border-radius: 3px;
+}
+
+.checkboxLabel:hover input ~ .checkmark {
+  background-color: #e0e0e0;
+}
+
+.checkboxLabel input:checked ~ .checkmark {
+  background-color: #464646;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.checkboxLabel input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.checkboxLabel .checkmark:after {
+  left: 6px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid #FFFFFF;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+
 .resetButton {
-  margin: 20px auto;
+  margin: 40px auto 0;
   width: 100%;
   height: 44px;
   background-color: #851212;
