Прописал логику для фильтра по категориям (ещё доработаю)

--- a/src/styles/catalog.module.css
+++ b/src/styles/catalog.module.css
@@ -2,9 +2,28 @@
 	height: auto;
 }
 
-.nothingFound p {
+.nothingFound {
 	grid-column: 1 / -1;
-	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 32px;
+	font-weight: 500;
+}
+
+.nothingFound p, .nothingFound img {
+	width: 40%;
+	height: auto;
+}
+
+.nothingFound img {
+	width: 20%;
+	height: auto;
+}
+
+.nothingFound img:hover {
+	transition: 0.5s;
+	transform: rotate(30deg)
 }
 
 .containerFilterFlypages {
