--- a/src/styles/filter.module.css
+++ b/src/styles/filter.module.css
@@ -13,7 +13,7 @@
   font-weight: 600;
 }
 
-.priceFilter {
+.priceFilter, .genderFilter, .categoryFilter {
   margin-top: 40px;
   margin-bottom: 30px;
 }
