--- a/client/src/styles/productList.module.css
+++ b/client/src/styles/productList.module.css
@@ -1,7 +1,7 @@
 .products {
 	display: grid;
 	grid-template-columns: repeat(4, 202.5px);
-	grid-template-rows: repeat(7, 350px);
+	grid-auto-rows: 350px;
 	gap: 20px;
 }
 
