--- a/client/src/styles/feedback.module.css
+++ b/client/src/styles/feedback.module.css
@@ -154,3 +154,16 @@
   text-align: center;
   margin: 30px 0 0;
 }
+
+.errorContainer {
+	text-align: center;
+}
+
+.errorContainer h2 {
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.errorMessage {
+	margin: 20px auto;
+}
